# PyTorch-Project-Template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build.py  clean_result.py  config_list.sh  dataset  json_parse.py  log_parse.py  mkdocs.yml  mlflow_parse.py  mlflow_to_csv.py  model_zoo  multinode.sh  pyproject.toml  requirements.txt  ruff.toml  template.env  test.py  torchrun.sh  train.py
.cursor/rules/: coding_style.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  ci_docker.yml
config/: config.yaml  dummy.yaml
config/DATASET/: dataset.yaml
config/LOSS/: loss.yaml
config/LR_SCHEDULER/: CosineAnnealingWarmupReduceRestarts.yaml  CosineLRScheduler.yaml  MultiStepLR.yaml  ReduceLROnPlateau.yaml
config/MODEL/: model.yaml
config/OPTIMIZER/: Momentum.yaml  NesterovMomentum.yaml  SGD.yaml
config/__BASE__/: config.yaml
config/__BASE__/DATASET/: dataset.yaml
config/__BASE__/LOSS/: loss.yaml
config/__BASE__/LR_SCHEDULER/: ChainedScheduler.yaml  CosineAnnealingWarmRestarts.yaml  CosineAnnealingWarmupReduceRestarts.yaml  CosineLRScheduler.yaml  IterScheduler.yaml  LinearLR.yaml  MultiStepLR.yaml  PolynomialLRDecay.yaml  ReduceLROnPlateau.yaml  StepLR.yaml  mmdet_1x.yaml  mmdet_20e.yaml  mmdet_2x.yaml
config/__BASE__/OPTIMIZER/: Adam.yaml  AdamW.yaml  Lion.yaml  Momentum.yaml  NesterovMomentum.yaml  SGD.yaml
config/__BASE__/dataset/: dummy_dataset.yaml
config/__BASE__/evaluator/: dummy_evaluator.yaml
config/__base__/: config.yaml
config/__base__/dataset/: dummy_dataset.yaml
config/__base__/evaluator/: dummy_evaluator.yaml
config/__base__/lr_scheduler/: ChainedScheduler.yaml  CosineAnnealingWarmRestarts.yaml  CosineAnnealingWarmupReduceRestarts.yaml  CosineLRScheduler.yaml  IterScheduler.yaml  LinearLR.yaml  MultiStepLR.yaml  None.yaml  PolyLRScheduler.yaml  PolynomialLRDecay.yaml  ReduceLROnPlateau.yaml  StepLR.yaml  mmdet_1x.yaml  mmdet_20e.yaml  mmdet_2x.yaml  timm_CosineLRScheduler.yaml  timm_PolyLRScheduler.yaml
config/__base__/optimizer/: Adam.yaml  AdamW.yaml  AdamWScheduleFree.yaml  Lamb.yaml  Lion.yaml  Momentum.yaml  NesterovMomentum.yaml  RAdamScheduleFree.yaml  SGD.yaml
doc/docs/: conf.py  index.md
doc/docs/api/: config.md  dataloaders.md  evaluator.md  models.md  optimizer.md  scheduler.md  transform.md  utils.md
doc/docs/architecture/: configuration.md  overview.md  registry.md
doc/docs/tutorials/: custom-components.md  getting-started.md  training.md
docker/: Dockerfile  build.sh  entrypoint.sh  exec.sh  run.sh  zshrc
notebook/: main.ipynb  mlflow.ipynb  test.ipynb
script/: aggregate_mlflow.py  clean_result copy.py  clean_result.py  edit_configs.py  json_parse.py  log_parse.py  run_docs.sh  run_mlflow.sh  run_notebook.sh  run_test.sh  show_config.py  show_model.py  show_modules.py  show_options.py  show_scheduler.py  show_transform.py  test_config.py  test_dataloader.py  test_evaluator.py  test_lr_scheduler.py  test_model.py  test_transform.py
src/: __init__.py  alias.py  sampler.py  scheduler.py  tester.py  trainer.py  transform.py  types.py
src/config/: __init__.py  base.py  config.py  config_dataset.py  config_model.py  manager.py  optional.py
src/csrc/: vision.cpp
src/csrc/DCNv3/: dcnv3.h
src/dataloaders/: __init__.py  base.py  build.py  dataloader.py  dataset.py  dummy.py  iteratable_dataloader.py  sampler.py  tensor_cache.py  types.py
src/evaluator/: __init__.py  base.py  build.py  dummy.py  evaluator.py
src/losses/: __init__.py  base.py  build.py  loss.py
src/models/: __init__.py  base.py  build.py  dummy.py  model.py  types.py
src/models/backbone/: __init__.py  build.py  hf_model.py  internimage.py  internimage_impl.py  swin_transformer.py  swin_transformer_impl.py
src/models/layers/: __init__.py  activation.py  attention.py  conv.py  dcnv3.py  init_weights.py  norm.py  pooling.py
src/models/losses/: __init__.py  base.py  build.py  dummy.py  loss.py
src/optimizer/: __init__.py  build.py  lion.py  schedule_free.py  timm_optimizer.py  torch_optimizers.py
src/runner/: __init__.py  base_tester.py  base_trainer.py  tester.py  trainer.py
src/scheduler/: __init__.py  build.py  scheduler.py  timm_scheduler.py
src/transform/: __init__.py  base.py  batch_compose.py  build.py  compose.py  convert.py  dummy.py  multiple.py  random.py  utils.py
src/utils/: __init__.py  config.py  evaluator.py  logger.py  mlflow_logger.py  registry.py  tensor_cache.py  torch_utils.py  utils.py
tests/: test_all_model.py  test_backbone.py  test_config.py  test_dataloader.py  test_dataset.py  test_evaluator.py  test_lr_scheduler.py  test_model.py  test_model_loss.py  test_modules.py  test_run.py  test_slack_notification.py  test_transform.py
tests/dev/: dev_model.py
