[project]
name = "pytorch-project-template"
version = "5.0.0"
description = ""
authors = [{ name = "Junya Morioka", email = "mjun@mjunya.com" }]
requires-python = ">=3.11"
dependencies = [
    "torch==2.4.0+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.4.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "torchvision==0.19.0+cu121; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.19.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "numpy<2.0.0",
    "timm>=1.0.8",
    "kornia>=0.7.3",
    "mlflow>=2.15.1",
    "torchmetrics>=1.4.1",
    "tqdm>=4.66.5",
    "matplotlib>=3.9.2",
    "omegaconf>=2.3.0",
    "opencv-python>=4.10.0.84",
    "python-dotenv>=1.0.1",
    "torchinfo>=1.8.0",
    "einops>=0.8.0",
    "loguru>=0.7.2",
    "pandas>=2.2.2",
    "tabulate>=0.9.0",
    "natsort>=8.4.0",
    "torch-cpp; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "wandb>=0.17.7",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu121/torch",
    "https://download.pytorch.org/whl/cu121/torchvision",
]
dev-dependencies = ["jupyter>=1.0.0", "pytest>=8.3.2", "ruff>=0.6.2"]

[tool.uv.sources]
torch-cpp = { url = "https://github.com/mjun0812/torch_cpp/releases/download/v1.1.1/torch_cpp-1.1.1+torch240cu121-cp311-cp311-linux_x86_64.whl" }

[tool.pyright]
exclude = ["dataset", "result"]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", ".vscode", "dataset", "result"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # flake8
    "I", # isort
]
ignore = [
    "G004",   # `logging-f-string` : loggingでf-stringを使いたいので無視する
    "COM812",
    "COM819",
    "D100",
    "D203",
    "D213",
    "D300",
    "D212",
    "D400",
    "D415",
    "E111",
    "E114",
    "E117",
    "ISC001",
    "ISC002",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "W191",
    "B007",
    "B905",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"
